--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,5 +13,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
 
+        <item
+            android:id="@+id/nav_boutique"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_boutique" />
+
     </group>
 </menu>
