--- a/app/src/main/res/layout/fragment_ventecatalogue.xml
+++ b/app/src/main/res/layout/fragment_ventecatalogue.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VenteCatalogueActivity">
+    tools:context=".VenteCatalogueFragment">
 
 
     <ImageView
@@ -12,7 +12,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="2dp"
-        android:onClick="onClickGrandProduit"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,8 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@color/colorAccent"
-        android:onClick="onClickAjouterPanier"
-        android:padding="5dp"
+       android:padding="5dp"
         android:src="@drawable/ic_basket_ajout_48"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +33,6 @@
         android:id="@+id/btn_precedent"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:onClick="onClickPrecedent"
         android:text="@string/vc_btn_precedent"
         android:theme="@style/boutongrise"
         app:layout_constraintBottom_toBottomOf="@id/img_produit"
@@ -51,7 +48,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="10dp"
-        android:onClick="onClickProduit"
         android:scaleType="centerInside"
         app:layout_constraintLeft_toRightOf="@id/btn_precedent"
         app:layout_constraintRight_toLeftOf="@id/btn_suivant"
@@ -61,8 +57,7 @@
         android:id="@+id/btn_suivant"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:onClick="onClickSuivant"
-        android:text="@string/vc_btn_suivant"
+       android:text="@string/vc_btn_suivant"
         android:theme="@style/boutongrise"
         app:layout_constraintBottom_toBottomOf="@+id/img_produit"
         app:layout_constraintLeft_toRightOf="@id/img_produit"
@@ -137,7 +132,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
-        android:onClick="onClickAnnuler"
         android:text="@string/vc_btn_annuler"
         app:layout_constraintBottom_toTopOf="@id/txt_footer"
         app:layout_constraintRight_toRightOf="parent" />
