--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,14 +9,17 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_boutique" />
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_connexion"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_connexion" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_nous_trouver"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-
+            android:title="@string/menu_nous_trouver" />
+        <item
+            android:id="@+id/nav_mentions_legales"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_mentions_legales" />
 
 
     </group>
