--- a/app/src/main/res/layout/fragment_ventecatalogue.xml
+++ b/app/src/main/res/layout/fragment_ventecatalogue.xml
@@ -23,11 +23,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_marginBottom="647dp"
         android:background="@color/colorAccent"
-       android:padding="5dp"
+        android:padding="5dp"
         android:src="@drawable/ic_basket_ajout_48"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/txt_footer"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_precedent"
@@ -126,15 +127,6 @@
         app:layout_constraintLeft_toRightOf="@id/scr_descriptionproduit"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sp_tailleproduit" />
-
-    <Button
-        android:id="@+id/btn_annuler"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:text="@string/vc_btn_annuler"
-        app:layout_constraintBottom_toTopOf="@id/txt_footer"
-        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/txt_footer"
