--- a/app/src/main/res/layout-land/fragment_ventecatalogue.xml
+++ b/app/src/main/res/layout-land/fragment_ventecatalogue.xml
@@ -121,26 +121,12 @@
         android:id="@+id/sp_tailleproduit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:entries="@array/taille"
+        android:spinnerMode="dropdown"
+        app:layout_constraintLeft_toRightOf="@id/scr_descriptionproduit"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/scr_descriptionproduit"
-        app:layout_constraintTop_toBottomOf="@id/txt_tarifproduit"
-        app:layout_constraintBottom_toTopOf="@+id/sp_colorisproduit"
-        android:layout_marginTop="10dp"
-        android:spinnerMode="dropdown"
-        android:entries="@array/taille" />
-
-    <Spinner
-        android:id="@+id/sp_colorisproduit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/sp_tailleproduit"
-        app:layout_constraintLeft_toRightOf="@id/scr_descriptionproduit"
-        app:layout_constraintTop_toBottomOf="@id/sp_tailleproduit"
-        app:layout_constraintBottom_toBottomOf="@id/scr_descriptionproduit"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:spinnerMode="dropdown"
-        android:entries="@array/coloris" />
+        app:layout_constraintTop_toBottomOf="@id/txt_tarifproduit" />
 
     <TextView
         android:id="@+id/txt_footer"
