--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -10,11 +10,11 @@
         android:id="@+id/lv_liste"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/radiogroup"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:divider="@color/colorPrimaryDark"
-        android:dividerHeight="1dp">
+        android:dividerHeight="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </ListView>
 
