--- a/app/src/main/res/layout/fragment_mentions_legales.xml
+++ b/app/src/main/res/layout/fragment_mentions_legales.xml
@@ -16,8 +16,11 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.494"
+        tools:text="test test test test test test test test test test test \n test test test test test " />
 </androidx.constraintlayout.widget.ConstraintLayout>
