--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/nav_nous_trouver"
         android:name="fr.univ_lorraine.iutmetz.wmce.dmcd0.ui.NousTrouverFragment"
         android:label="@string/menu_nous_trouver"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_nous_trouver" />
     <fragment
         android:id="@+id/nav_boutique"
         android:name="fr.univ_lorraine.iutmetz.wmce.dmcd0.CategoriesFragment"
