--- a/app/src/main/res/layout/fragment_ventecatalogue.xml
+++ b/app/src/main/res/layout/fragment_ventecatalogue.xml
@@ -128,6 +128,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sp_tailleproduit" />
 
+    <ToggleButton
+        android:id="@+id/button_favorite"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_favorite"
+        android:checked="false"
+        android:text=""
+        android:textOff=""
+        android:textOn=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/scr_descriptionproduit"
+        app:layout_constraintTop_toBottomOf="@+id/sp_colorisproduit" />
+
     <TextView
         android:id="@+id/txt_footer"
         android:layout_width="0dp"
