--- a/app/src/main/res/layout/fragment_ventecatalogue.xml
+++ b/app/src/main/res/layout/fragment_ventecatalogue.xml
@@ -130,7 +130,7 @@
         android:textOn=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/scr_descriptionproduit"
-        app:layout_constraintTop_toBottomOf="@+id/sp_colorisproduit" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_tailleproduit" />
 
     <TextView
         android:id="@+id/txt_footer"
